--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,6 +12,7 @@ lambda_runtime = "0.4.1"
 openssl = { version = "0.10", features = ["vendored"] }
 simple_logger = "2.1"
 log = "0.4"
+serde_json = "1.0.69"
 
 
 [[bin]]
